--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,7 +9,7 @@ html {
 
 body {
   margin: 0;
-  font-size: 0.9rem
+  font-size: 0.9rem;
   padding: $masthead-height 0 0;
   padding-bottom: 9em;
   color: $text-color;
