--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,7 +13,7 @@ body {
   padding: $masthead-height 0 0;
   padding-bottom: 9em;
   color: $text-color;
-  font-family: $global-font-family;
+  // font-family: $global-font-family;
   line-height: 1.5;
 
   &.overflow--hidden {
