--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,11 +10,11 @@ html {
 body {
   margin: 0;
   font-size: 0.2rem;
-  padding: $masthead-height 0 0;
-  padding-bottom: 9em;
+  // padding: $masthead-height 0 0;
+  // padding-bottom: 9em;
   color: $text-color;
   // font-family: $global-font-family;
-  line-height: 1.5;
+  // line-height: 1.5;
 
   &.overflow--hidden {
     /* when primary navigation is visible, the content in the background won't scroll */
