--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -137,3 +137,14 @@ $susy: (
   container: 1400px,        /* Set specific width to fill the screen */
   global-box-sizing: border-box,
 );
+
+
+/*
+   Other
+   ========================================================================== */
+
+$border-radius              : 4px;
+$box-shadow                 : 0 1px 1px rgba(0, 0, 0, 0.125);
+$navicon-width              : 28px;
+$navicon-height             : 4px;
+$global-transition          : all 0.2s ease-in-out;
